--- a/Networking/Networking/Base.lproj/Main.storyboard
+++ b/Networking/Networking/Base.lproj/Main.storyboard
@@ -39,26 +39,47 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afS-dy-eoZ">
+                                <rect key="frame" x="16" y="200" width="361" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUa-34-Ukr">
+                                <rect key="frame" x="16" y="237" width="361" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Post User"/>
+                                <connections>
+                                    <action selector="addUserAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DtQ-Ba-i2t"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="gEg-qM-efx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2zz-oS-cHy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Abe-0V-6T8" secondAttribute="trailing" constant="16" id="6f1-wM-Ofa"/>
+                            <constraint firstItem="afS-dy-eoZ" firstAttribute="top" secondItem="eET-c4-6bA" secondAttribute="bottom" constant="16" id="I8s-YI-IcE"/>
+                            <constraint firstItem="afS-dy-eoZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="M4K-fi-2Bt"/>
                             <constraint firstItem="Abe-0V-6T8" firstAttribute="top" secondItem="klt-Md-TEz" secondAttribute="bottom" constant="16" id="Mbj-ni-0r4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eET-c4-6bA" secondAttribute="trailing" constant="16" id="OeZ-Aw-aGo"/>
+                            <constraint firstItem="CUa-34-Ukr" firstAttribute="top" secondItem="afS-dy-eoZ" secondAttribute="bottom" constant="16" id="PbT-CX-HVT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="klt-Md-TEz" secondAttribute="trailing" constant="16" id="QGA-PT-rBn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CUa-34-Ukr" secondAttribute="trailing" constant="16" id="THU-m7-kWF"/>
                             <constraint firstItem="klt-Md-TEz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Vip-mk-4Qv"/>
                             <constraint firstItem="gEg-qM-efx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W2M-ax-DTs"/>
                             <constraint firstItem="eET-c4-6bA" firstAttribute="top" secondItem="Abe-0V-6T8" secondAttribute="bottom" constant="16" id="gQi-Da-NCZ"/>
                             <constraint firstItem="klt-Md-TEz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kul-p5-ra7"/>
+                            <constraint firstItem="CUa-34-Ukr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ljO-Vt-ywN"/>
                             <constraint firstItem="Abe-0V-6T8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="odo-86-BQs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="afS-dy-eoZ" secondAttribute="trailing" constant="16" id="oqk-n6-ygF"/>
                             <constraint firstItem="eET-c4-6bA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="wF6-at-fC7"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="gEg-qM-efx" id="JQd-rL-MMD"/>
                         <outlet property="emailLabel" destination="eET-c4-6bA" id="Y3t-a7-ofy"/>
+                        <outlet property="idLabel" destination="afS-dy-eoZ" id="wJz-rD-OzR"/>
                         <outlet property="nameLable" destination="Abe-0V-6T8" id="Ejl-pa-EUb"/>
                     </connections>
                 </viewController>
