--- a/Networking/Networking/Base.lproj/Main.storyboard
+++ b/Networking/Networking/Base.lproj/Main.storyboard
@@ -24,9 +24,6 @@
                                     <action selector="getUserAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="agd-PH-qgq"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="gEg-qM-efx">
-                                <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
-                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eET-c4-6bA">
                                 <rect key="frame" x="16" y="163" width="361" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -61,6 +58,9 @@
                                     <action selector="updateUserAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5aa-Rj-mmN"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DXd-em-sym">
+                                <rect key="frame" x="16" y="460.66666666666674" width="361" height="341.33333333333326"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xwz-qY-4HH">
                                 <rect key="frame" x="16" y="339" width="361" height="35"/>
                                 <state key="normal" title="Button"/>
@@ -69,14 +69,27 @@
                                     <action selector="deleteUserAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fzv-de-fMb"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="gEg-qM-efx">
+                                <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dey-Ki-n6z">
+                                <rect key="frame" x="121" y="613.66666666666663" width="151" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Download Image"/>
+                                <connections>
+                                    <action selector="donwloadImageAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VS8-Cj-clO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xwz-qY-4HH" secondAttribute="trailing" constant="16" id="0Ee-O4-9l9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DXd-em-sym" secondAttribute="bottom" constant="16" id="2qv-P2-2TI"/>
                             <constraint firstItem="gEg-qM-efx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2zz-oS-cHy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Abe-0V-6T8" secondAttribute="trailing" constant="16" id="6f1-wM-Ofa"/>
                             <constraint firstItem="Xwz-qY-4HH" firstAttribute="top" secondItem="tml-yh-Lxl" secondAttribute="bottom" constant="16" id="A8t-bn-KNe"/>
+                            <constraint firstItem="DXd-em-sym" firstAttribute="top" secondItem="gEg-qM-efx" secondAttribute="bottom" constant="16" id="Boa-aK-ovN"/>
                             <constraint firstItem="afS-dy-eoZ" firstAttribute="top" secondItem="eET-c4-6bA" secondAttribute="bottom" constant="16" id="I8s-YI-IcE"/>
                             <constraint firstItem="afS-dy-eoZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="M4K-fi-2Bt"/>
                             <constraint firstItem="Abe-0V-6T8" firstAttribute="top" secondItem="klt-Md-TEz" secondAttribute="bottom" constant="16" id="Mbj-ni-0r4"/>
@@ -88,6 +101,10 @@
                             <constraint firstItem="tml-yh-Lxl" firstAttribute="top" secondItem="CUa-34-Ukr" secondAttribute="bottom" constant="16" id="Uyf-1z-xzw"/>
                             <constraint firstItem="klt-Md-TEz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Vip-mk-4Qv"/>
                             <constraint firstItem="gEg-qM-efx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W2M-ax-DTs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DXd-em-sym" secondAttribute="trailing" constant="16" id="YaP-RO-rTO"/>
+                            <constraint firstItem="dey-Ki-n6z" firstAttribute="centerX" secondItem="DXd-em-sym" secondAttribute="centerX" id="Yds-ho-7hK"/>
+                            <constraint firstItem="DXd-em-sym" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="eYI-l4-R5W"/>
+                            <constraint firstItem="dey-Ki-n6z" firstAttribute="centerY" secondItem="DXd-em-sym" secondAttribute="centerY" id="f5a-MC-w6w"/>
                             <constraint firstItem="Xwz-qY-4HH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="fvG-2u-6Ow"/>
                             <constraint firstItem="eET-c4-6bA" firstAttribute="top" secondItem="Abe-0V-6T8" secondAttribute="bottom" constant="16" id="gQi-Da-NCZ"/>
                             <constraint firstItem="klt-Md-TEz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kul-p5-ra7"/>
@@ -100,8 +117,10 @@
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="gEg-qM-efx" id="JQd-rL-MMD"/>
+                        <outlet property="downloadImageButton" destination="dey-Ki-n6z" id="8Y8-Us-FMn"/>
                         <outlet property="emailLabel" destination="eET-c4-6bA" id="Y3t-a7-ofy"/>
                         <outlet property="idLabel" destination="afS-dy-eoZ" id="wJz-rD-OzR"/>
+                        <outlet property="logoImageView" destination="DXd-em-sym" id="skO-dt-GHw"/>
                         <outlet property="nameLable" destination="Abe-0V-6T8" id="Ejl-pa-EUb"/>
                     </connections>
                 </viewController>
